Add and enhance unit tests: include tests for `ProfileService`, `GameService`, and `AnalysisService`; integrate comprehensive mock data and fixtures. Refactor imports and naming conventions in tests for consistency. Augment `.env.example` with monitoring and logging configurations.

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 # Copy this file to .env and fill in your values
 
 # =============================================================================
-# REQUIRED: GeoGuessr Authentication
+# OPTIONAL: GeoGuessr Authentication
 # =============================================================================
 # Your GeoGuessr _ncfa cookie for API authentication
+# If not set, users must authenticate using the login tool
 #
 # How to get your _ncfa cookie:
 # 1. Log in to GeoGuessr in your browser
@@ -15,9 +16,8 @@
 # 6. Copy its value and paste it below
 #
 # IMPORTANT: Keep this secret! Anyone with this cookie can access your account.
-# The cookie typically expires after some time, so you may need to update it periodically.
 
-GEOGUESSR_NCFA_COOKIE=your_ncfa_cookie_value_here
+GEOGUESSR_NCFA_COOKIE=
 
 # =============================================================================
 # MCP Server Configuration
@@ -25,12 +25,35 @@ GEOGUESSR_NCFA_COOKIE=your_ncfa_cookie_value_here
 # Transport protocol: "streamable-http" (recommended) or "sse" (legacy)
 MCP_TRANSPORT=streamable-http
 
+# Host to bind to (0.0.0.0 for all interfaces)
+MCP_HOST=0.0.0.0
+
 # Port to expose the server on
 MCP_PORT=8000
 
 # =============================================================================
-# Optional: API Key Authentication (recommended for production)
+# API Monitoring Configuration
 # =============================================================================
-# If you want to require API key authentication for accessing the MCP server
-# Uncomment and set a secure API key
-# API_KEYS=your-secure-api-key-here,another-api-key-if-needed
+# Enable automatic API endpoint monitoring
+MONITORING_ENABLED=true
+
+# How often to check API endpoints (in hours)
+MONITORING_INTERVAL_HOURS=24
+
+# Directory to store schema cache (persisted between restarts)
+SCHEMA_CACHE_DIR=/app/data/schemas
+
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# =============================================================================
+# Request Configuration
+# =============================================================================
+# Request timeout in seconds
+REQUEST_TIMEOUT=30.0
+
+# Maximum retry attempts for failed requests
+MAX_RETRIES=3
