--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,16 +41,18 @@ dev = [
     "pre-commit>=3.6.0",
     "debugpy>=1.8.0",
     "ipython>=8.0.0",
-    "rich>=13.0.0"
+    "rich>=13.0.0",
+    "uv>=0.9.0",
+    "hatch>=1.10.0",
 ]
 
 [project.scripts]
 geoguessr-mcp = "server:main"
 
 [project.urls]
-Homepage = "https://github.com/yourusername/geoguessr-mcp"
-Repository = "https://github.com/yourusername/geoguessr-mcp"
-Issues = "https://github.com/yourusername/geoguessr-mcp/issues"
+Homepage = "https://github.com/NyxiumYuuki/GeoGuessrMCP"
+Repository = "https://github.com/NyxiumYuuki/GeoGuessrMCP"
+Issues = "https://github.com/NyxiumYuuki/GeoGuessrMCP/issues"
 
 [build-system]
 requires = ["hatchling"]
