--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dev = [
 ]
 
 [project.scripts]
-geoguessr-mcp = "server:main"
+geoguessr-mcp = "geoguessr_mcp.main:main"
 
 [project.urls]
 Homepage = "https://github.com/NyxiumYuuki/GeoGuessrMCP"
@@ -59,7 +59,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["src/geoguessr_mcp"]
 
 # Black configuration
 [tool.black]
